--- a/.github/workflows/stack.yml
+++ b/.github/workflows/stack.yml
@@ -14,17 +14,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04]
-        ghc-ver: [9.2.4, 9.0.1, 8.10.5, 8.8.4, 8.6.5, 8.4.4, 8.2.2, 8.0.2]
-        stack-ver: [2.7.1]
+        os: [ubuntu-latest]
+        ghc-ver: [9.4.4, 9.2.5, 9.0.2, 8.10.7, 8.8.4, 8.6.5, 8.4.4, 8.2.2, 8.0.2]
 
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
-    - uses: haskell/actions/setup@v1
+    - uses: haskell/actions/setup@v2
       with:
         ghc-version: ${{ matrix.ghc-ver }}
-        stack-version: ${{ matrix.stack-ver }}
         enable-stack: true
     - name: Build 
       run: stack build --stack-yaml=stack-${{ matrix.ghc-ver }}.yaml --no-terminal --system-ghc
