--- a/geniplate-mirror.cabal
+++ b/geniplate-mirror.cabal
@@ -1,5 +1,5 @@
 Name:           geniplate-mirror
-Version:        0.7.8
+Version:        0.7.9
 Synopsis:       Use Template Haskell to generate Uniplate-like functions.
 Description:    Use Template Haskell to generate Uniplate-like functions.
                 .
@@ -17,6 +17,15 @@ Category:       Generics
 Cabal-Version:  >= 1.10
 Build-type:     Simple
 Stability:      experimental
+tested-with: GHC == 9.4.4
+           , GHC == 9.2.5
+           , GHC == 9.0.2
+           , GHC == 8.10.7
+           , GHC == 8.8.4
+           , GHC == 8.6.5
+           , GHC == 8.4.4
+           , GHC == 8.2.2
+           , GHC == 8.0.2
 
 Extra-source-files:
   examples/Main.hs
@@ -29,6 +38,6 @@ source-repository head
 
 library
   Default-Language: Haskell98
-  Build-Depends: base >= 4 && < 5.0, template-haskell < 2.19, mtl
+  Build-Depends: base >= 4 && < 5.0, template-haskell < 2.20, mtl
 
   Exposed-modules:      Data.Generics.Geniplate
