--- a/stack-9.0.2.yaml
+++ b/stack-9.0.2.yaml
@@ -1,4 +1,7 @@
-resolver: lts-18.0
-compiler: ghc-8.10.5
+resolver: lts-19.33
+compiler: ghc-9.0.2
 # Allow a newer minor version of GHC than the snapshot specifies
 compiler-check: newer-minor
+
+packages:
+- .
