--- a/stack-9.4.4.yaml
+++ b/stack-9.4.4.yaml
@@ -1,5 +1,6 @@
-resolver: ghc-9.0.1
-compiler: ghc-9.0
+resolver: nightly-2023-01-22
+compiler: ghc-9.4.4
+
 # Allow a newer minor version of GHC than the snapshot specifies
 compiler-check: newer-minor
 
