--- a/stack-9.4.8.yaml
+++ b/stack-9.4.8.yaml
@@ -1,5 +1,5 @@
-resolver: nightly-2023-01-22
-compiler: ghc-9.4.4
+resolver: lts-21.25
+compiler: ghc-9.4.8
 
 # Allow a newer minor version of GHC than the snapshot specifies
 compiler-check: newer-minor
